# lms

./: alembic.ini  docker-compose.yml  pyproject.toml
lms/core/infrastructure/repository/schemas/: base.py  mixins.py
lms/subapps/users/application/api/: __init__.py  authentication.py
lms/subapps/users/infrastructure/migrations/: env.py
lms/subapps/users/infrastructure/repositories/schemas/: user.py
tests/: test_linters.py
